# Profession-Archives

./: .gitignore  README.md  pyproject.toml  run-green.bat
backend/: desktop.py
backend/app/: db.py  main.py  schemas.py
backend/app/core/: config.py
backend/app/services/: archive_store.py  resume_builder.py
desktop/: index.html  package-lock.json  package.json  tsconfig.json
desktop/src/: App.vue
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/src/: main.rs
desktop/src/services/: api.ts
desktop/src/views/: ArchiveEntryView.vue  JobInputView.vue  ProfileManagerView.vue  TrackingBoardView.vue
dev-tools/: build.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: App.vue  env.d.ts  style.css
frontend/src/services/: api.ts
frontend/src/views/: ArchiveEntryView.vue  HomeView.vue  ProfileManagerView.vue  TrackingBoardView.vue
tests/: conftest.py  test_api.py
tools/: PORTABLE-CHECKLIST.md  README.md  bootstrap-green.ps1  check-green.bat
