[package]
name = "profession_archives_desktop"
version = "0.1.0"
description = "Profession Archives desktop shell"
edition = "2021"

[lib]
name = "profession_archives_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.2.0", features = [] }

[dependencies]
tauri = { version = "2.2.0", features = [] }
